trying to reduce build size.

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -160,5 +160,5 @@ $close-text-shadow:           none !default;
 $pre-color:                         inherit !default;
 
 // Font-Awesome
-$fa-font-path: "../../../node_modules/@fortawesome/fontawesome-free/webfonts";
+// $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
