--- a/src/assets/scss/sealog.scss
+++ b/src/assets/scss/sealog.scss
@@ -5,7 +5,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 // Import fonts
-@import "~@fontsource/roboto/index.css"; // Weight 400.
+@import "~@fontsource/roboto/400.css"; // Weight 400.
 @import "~@fontsource/roboto/700.css"; // Weight 700.
 
 // Import FontAwesome
@@ -55,7 +55,7 @@
 }
 
 .event-data-card {
-
+  width: 100%;
   border-color: $secondary;
   .card-header {
     padding-left: .5rem !important;
@@ -72,6 +72,13 @@
       text-transform: capitalize;
     }
   }
+}
+
+.event-data-col {
+  padding-bottom: 0.5rem !important;
+  padding-right: 0.25rem !important;
+  padding-left: 0.25rem !important;
+  display: flex;
 }
 
 .event-image-data-card {
